--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+0.5 (dev)
+-----
+* sort field names in Fieldset/Dispatcher generated form
+* Extracted code to create default FieldDefinition to be used out of migrations
+
+
 0.4
 ---
 * fixes wrong dependency version
