--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,9 @@
-0.5 (dev)
+(dev)
 -----
+
+
+0.5
+---
 * sort field names in Fieldset/Dispatcher generated form
 * Extracted code to create default FieldDefinition to be used out of migrations
 
