--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.7.4
+-----
+* preserve existing values for file-like flex fields during validation
+
+
 0.7.3
 -----
 * changed default auto field
